# ProgUniv

./: CHANGELOG.txt  Makefile.am  Makefile.in  README.md  config.h.in  configure.ac  cross_win32.sh  cross_win64.sh  proguniv-1.0.pc.in
libs/InpOutBinaries/: prepareDllForMingW_Test.txt~
libs/InpOutBinaries/Win32/: inpout32.def
proguniv/: Makefile.am  Makefile.in
proguniv/include/: ATMELGenericParallelIF.hh  ATMELGenericSerialHwIF.hh  ATMELGenericSerialIF.hh  ATMELGenericSerialPagedMem.hh  ApolloV.hh  ApolloVFactory.hh  CCCP.hh  Chip.hh  ChipAT90S2313.hh  ChipAT90S8515.hh  ChipAT90Usb1286.hh  ChipATMega168.hh  ChipATMega168PA.hh  ChipATMega2560.hh  ChipATMega328.hh  ChipATMega328P.hh  ChipATMega48.hh  ChipATMega48A.hh  ChipATMega48PA.hh  ChipATMega644.hh  ChipATMega8.hh  ChipATMega88.hh  ChipATMega88PA.hh  ChipATTiny25.hh  ChipATTiny261.hh  ChipATTiny45.hh  ChipATTiny461.hh  ChipATTiny85.hh  ChipATTiny861.hh  ChipATTinyx5.hh  ChipATTinyx61.hh  ChipOptionsFileRWManager.hh  ConversionException.hh  ErrorBuildingProgrammerException.hh  Ficheiro.hh  GlobalOptions.hh  Intelhex.hh  Intelhex16.hh  InvalidAddressException.hh  InvalidFileException.hh  (+24 more)
proguniv/libs/InpOutBinaries/: inpout32.h  prepareDllForMingW_Test.txt
proguniv/libs/InpOutBinaries/x64/: inpoutx64.def
proguniv/src/: ATMELGenericSerial.cc  ATMELGenericSerialIF.cc  ATMELGenericSerialNew.cc  ATMELGenericSerialPagedMem.cc  ApolloV.cc  Chip.cc  ChipAT90S2313.cc  ChipAT90S8515.cc  ChipAT90Usb1286.cc  ChipATMega168.cc  ChipATMega2560.cc  ChipATMega328.cc  ChipATMega32U4.cc  ChipATMega48.cc  ChipATMega644.cc  ChipATMega8.cc  ChipATMega88.cc  ChipATMegaxx8.cc  ChipATTiny25.cc  ChipATTiny261.cc  ChipATTiny45.cc  ChipATTiny461.cc  ChipATTiny85.cc  ChipATTiny861.cc  ChipATTinyx5.cc  ChipATTinyx61.cc  ChipOptionsFileRWManager.cc  Ficheiro.cc  GlobalOptions.cc  Intelhex.cc  Intelhex16.cc  LPTInterfaceControl.cc  LPTLinuxLowLevel.cc  LPTLowLevelInterface.cc  LPTWinLowLevel.cc  MCHIP14Generic.cc  Memoria.cc  MemoryInterceptorProxy.cc  PIC16F874.cc  ProgUniv.cc  (+7 more)
